# src/routes/index.js
@@ -4,7 +4,7 @@ import { userRoutes } from "./UserRoutes.js";
 import { postRoutes } from "./PostRoutes.js";
 import {categoryRoutes } from "./CategoryRoutes.js"
 import { docRoutes } from './DocRoutes.js'
-
+import { commentRoutes} from './CommentRoutes.js'
 const API_router = Router();
 
 export const router = (app) => {
@@ -15,5 +15,6 @@ export const router = (app) => {
   API_router.use("/user", userRoutes )
   API_router.use("/post", postRoutes )
   API_router.use("/category", categoryRoutes )
+  API_router.use("/comment", commentRoutes )
   
 }
